# magic-rust-discord-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.reports.yml  docker-compose.yml  global_constants.py  pyproject.toml
.github/workflows/: build_docker.yml  build_image_generator.yml  deploy_prod.yml
bot/: Dockerfile  __init__.py  __main__.py  bot.py  config.py  constants.py  custom_emoji.py  dynamic_settings.py  exceptions.py  requirements.txt
bot/apps/: apps_config.py
bot/apps/activity/: activity_provider.py  setup.py
bot/apps/auto_moderation/: reaction_moderation.py  setup.py
bot/apps/banner_updater/: banner_updater.py  setup.py
bot/apps/bot_messages/: autocomplete.py  commands.py  embeds.py  exceptions.py  messages.py  messages_queue.py  modals.py  services.py  setup.py  utils.py
bot/apps/channel_cleaner/: channel_cleaner.py  embeds.py  exceptions.py  room_cleaner.py  room_creator.py  setup.py
bot/apps/exporter/: commands.py  constants.py  exceptions.py  setup.py  structs.py
bot/apps/find_friends/: commands.py  constants.py  cooldowns.py  embeds.py  events.py  exceptions.py  modals.py  setup.py
bot/apps/image_updater/: buttons.py  commands.py  embeds.py  exceptions.py  image_updater.py  select_buttons.py  setup.py  views.py
bot/apps/info_provider/: info_provider.py  setup.py
bot/apps/news_reposts/: buttons.py  constants.py  news_reposts.py  setup.py  views.py
bot/apps/reports/: channel_setup_cog.py  constants.py  setup.py
bot/apps/server_filter/: buttons.py  commands.py  embeds.py  server_filter.py  setup.py  views.py
bot/apps/server_status/: buttons.py  embeds.py  select_buttons.py  server_status_updater.py  setup.py  views.py
bot/apps/servicing_posts/: constants.py  servicing_cog.py  settings_cog.py  setup.py  storages.py
bot/apps/settings/: commands.py  entrypoint.py
bot/apps/tickets/: commands.py  constants.py  errors.py  events.py  overwrites.py  setup.py  tasks.py  utils.py
bot/apps/unban_tickets/: commands.py  constants.py  cooldowns.py  embeds.py  errors.py  setup.py
bot/core/: localization.py  redis_cooldown.py
bot/find_friends/: commands.py  setup.py
bot/settings/: setup.py
bot/users/: exceptions.py  utils.py
core/: checks.py  config.py  constants.py  converters.py  emojis.py  localization.py  logger.py  redis_cooldown.py  redis_settings.py  shortcuts.py
core/actions/: abstract.py
core/api_clients/: vk.py
core/autocompletes/: base.py
core/clients/: async_redis.py  http.py  redis.py  server_data_api.py
core/errors/: base.py
core/ui/: modals.py
core/utils/: colors.py  date_time.py  decorators.py  exceptions.py  format_strings.py  humanize.py  regex.py
image_generator/: Dockerfile  __main__.py  application.py  config.py  exceptions.py  fields.py  image_generator.py  image_templates.py  redis_namespaces.py  requirements.txt
reports/: Dockerfile  __main__.py  bot.py  channel_config.py  config.py  constants.py  exceptions.py  modals.py  requirements.txt  setup.py  view.py
reports/cogs/: channel_setup.py  setup.py
reports/services/: cooldowns.py  report_sender.py
reports/ui/: modals.py  report_view.py  select_server_view.py  view.py
(+160 files in other folders)
