[tool.poetry]
name = "magicrust-discord"
version = "0.9.9"
description = ""
authors = ["MaHryCT3 <mahryct123@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
redis = "^5.0.6"
aiohttp = "^3.10.3"
requests = "^2.32.3"
aiocache = "^0.12.2"
pynacl = "^1.5.0"
httpx = "^0.27.2"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
pre-commit = "^3.7.1"


[tool.poetry.group.bot.dependencies]
validators = "^0.33.0"
py-cord = "^2.6.0"
python-dateutil = "^2.9.0.post0"


[tool.poetry.group.image-generator.dependencies]
pillow = "^10.4.0"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ['Q', 'F', 'I', 'ANN', 'B', 'C4', 'TID', 'ARG', 'PLR']
ignore = [
    'ANN101', 'ANN204', 'ANN401', 'ANN002', 'ANN003',
    'PLR0913', 'ANN202', 'ANN201', 'ANN001',
    'ANN206', 'ANN102', 'C408'
]
# ANN - https://beta.ruff.rs/docs/rules/#flake8-annotations-ann,
# PLR0913 - Too many arguments


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Unused import

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.black]
skip-string-normalization = true
exclude = '(\.git|\.venv|\.idea)'
line-length = 120